2008-04-13  Vincent Untz  <vuntz@gnome.org>

	* libmenu/gmenu-tree.c: (gmenu_tree_execute_moves): correctly order the
	list of move operations to execute, so it's possible to undo a move by
	doing the opposite move afterwards.
	Fix bug #323771.

2008-04-12  Vincent Untz  <vuntz@gnome.org>

	If a <Layout> or <DefaultLayout> is missing some <Merge> nodes,
	consider that they're implicit and add them.

	* libmenu/menu-layout.c: (fixup_layout_node): new, to add the missing
	<Merge> nodes
	(end_element_handler): hook up the new function at the end of the
	parsing of the <Layout> and <DefaultLayout> nodes
	Fix end of bug #458285.

2008-04-12  Vincent Untz  <vuntz@gnome.org>

	* layout/preferences.menu: do not exclude gnomecc.desktop (since
	alacarte will show it as excluded), but instead explicitly do not
	include it (and alacarte will not show it as excluded this way)
	Fix a bug where gnomecc.desktop is shown both in the toplevel System
	menu and in the Preferences submenu.

2008-04-12  Vincent Untz  <vuntz@gnome.org>

	* libmenu/gmenu-tree.c: (process_layout): if showing excluded items (as
	in alacarte), remove an entry from the excluded set if it's explicitly
	included after the <Exclude> node.
	Fix bug #441198.

2008-04-12  Vincent Untz  <vuntz@gnome.org>

	* layout/settings.menu: Merge menus and files at the end of the layout.
	Fix part of bug #458285.

2008-04-12  Vincent Untz  <vuntz@gnome.org>

	Do not show unless specifically asked separators at the beginning of a
	menu, or at the end of a menu, or after another separator.
	Fix bug #497399.

	* python/gmenu.c: (initgmenu): add new flag
	* libmenu/gmenu-tree.[ch]: add new GMENU_TREE_FLAGS_SHOW_ALL_SEPARATORS
	flag
	(check_pending_separator): append a separator to a menu if there's a
	pending one
	(merge_subdir):
	(merge_entry): add calls to check_pending_separator()
	(process_layout_info): implement logic to add a separator if
	GMENU_TREE_FLAGS_SHOW_ALL_SEPARATORS is specified or add a pending one